@@ -5,7 +5,7 @@ use warnings;
 use 5.010_001;
 use Pod::Usage;
 
-use version; our $VERSION = 'v0.4.2';
+use version; our $VERSION = 'v0.5.0';
 
 use App::Koyomi::Worker;
 
