@@ -2,6 +2,11 @@ Revision history for Perl extension App-Koyomi
 
 {{$NEXT}}
 
+2015-06-07 v0.5.0  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
+
+    - Add: SQLite schema
+    - Add: Fake implementation of semaphore datasource module
+
 2015-06-07 v0.4.2  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
 
     - Add: koyomi command-line options - --config|-c <Str> to specify config path,
